--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,4 @@ dbs
 
 *.wav
 
-scripts/reproducibility/mp3_files.txt
-scripts/reproducibility/music
-scripts/reproducibility/queries_*
-scripts/reproducibility/*csv
+eval_data
