Changed default settings to make debugging easier. Fixed paths of media files

--- a/resources/defaults/config.properties
+++ b/resources/defaults/config.properties
@@ -15,7 +15,10 @@ NUMBER_OF_QUERY_RESULTS=1000
 # The number of processors available 
 # to Panako. If zero (or less) all 
 # available processor cores are used.
-AVAILABLE_PROCESSORS=0
+# By default, only a single CPU core is used.
+# This makes debugging easier.
+# If you want a significant speed-up, set this to zero
+AVAILABLE_PROCESSORS=1
 
 ################Input################
 # The maximum file size (in MB) of files 
