--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ import java.text.SimpleDateFormat
 plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'java'
+    id 'maven-publish'
 }
 
 group 'be.panako'
@@ -38,6 +39,20 @@ jar {
         )
     }
 }
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = "https://maven.pkg.github.com/JorenSix/Panako"
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
+
 
 test {
     useJUnitPlatform()
