Caching improvements: to avoid repeated feature extraction caching is now implemented with a content based hash and not on a path of a file.

--- a/resources/defaults/logging.properties
+++ b/resources/defaults/logging.properties
@@ -56,3 +56,4 @@ java.util.logging.FileHandler.limit=5000000
 java.util.logging.FileHandler.count=5
 
 # Style of output (Simple or XML):
+java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
