--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,6 +25,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: FedericoCarboni/setup-ffmpeg@v1
       id: setup-ffmpeg
+      with:
+        - token: ${{ secrets.GITHUB_TOKEN }}
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
