--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,7 +26,7 @@ jobs:
     - uses: FedericoCarboni/setup-ffmpeg@v1
       id: setup-ffmpeg
       with:
-        - token: ${{ secrets.GITHUB_TOKEN }}
+        - token: "${{ secrets.GITHUB_TOKEN }}"
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
