--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,10 +23,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: FedericoCarboni/setup-ffmpeg@v1
+    - uses: FedericoCarboni/setup-ffmpeg@v2
       id: setup-ffmpeg
       with:
-        - token: "${{ secrets.GITHUB_TOKEN }}"
+        token: "${{ secrets.GITHUB_TOKEN }}"
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
