--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ doc/javadoc
 config.properties
 
 !resources/defaults/config.properties
+resources/scripts/benchmark/*csv
+resources/scripts/benchmark/*txt
 
 dbs
 
