--- a/build.gradle
+++ b/build.gradle
@@ -26,13 +26,12 @@ dependencies {
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'org.slf4j:slf4j-simple:1.7.36'
     implementation group: 'org.lmdbjava', name: 'lmdbjava', version: '0.8.3-SNAPSHOT'
+
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
     implementation 'be.tarsos.dsp:core:2.5'
     implementation 'be.tarsos.dsp:jvm:2.5'
-
-    ConfigurableFileCollection dependencies =  files("lib/JGaborator-0.6.jar")
-    implementation(dependencies)
+    implementation "be.ugent.jgaborator:jgaborator:0.7"
 }
 
 jar {
