--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,23 @@ repositories {
     }
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+
 dependencies {
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'org.slf4j:slf4j-simple:1.7.36'
-    implementation group: 'org.lmdbjava', name: 'lmdbjava', version: '0.8.3-SNAPSHOT'
+
+    implementation "org.mlmdbjava:lmdbjava:0.9.1"
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 
     implementation 'be.tarsos.dsp:core:2.5'
     implementation 'be.tarsos.dsp:jvm:2.5'
-    implementation "be.ugent.jgaborator:jgaborator:0.7"
+    implementation 'be.ugent.jgaborator:jgaborator:0.7'
 }
 
 jar {
@@ -48,13 +55,55 @@ jar {
 }
 
 publishing {
+    publications {
+    mavenJava(MavenPublication) {
+        from components.java
+
+        pom {
+            name = 'Panako'
+            description = 'An audio fingerprinting system in Java'
+            url = 'https://github.com/JorenSix/Panako'
+            licenses {
+                license {
+                    name = 'AGPL'
+                    url = 'https://www.gnu.org/licenses/agpl-3.0.txt'
+                }
+            }
+            developers {
+                developer {
+                    id = 'JorenSix'
+                    name = 'Joren Six'
+                    email = 'joren.six@ugent.be'
+                }
+            }
+            scm {
+                connection = 'https://github.com/JorenSix/Panako.git'
+                developerConnection = 'git@github.com:JorenSix/Panako.git'
+                url = 'https://github.com/JorenSix/Panako/'
+            }
+        }
+    }
+    }
+
     repositories {
+
         maven {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/JorenSix/Panako"
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+
+
+        //public, self hosted repository
+        maven {
+            name = "reposilite"
+            url = "https://mvn.0110.be/releases"
+            credentials {
+                username = System.getenv("REPOSILITE_ACTOR")
+                password = System.getenv("REPOSILITE_TOKEN")
             }
         }
     }
@@ -66,8 +115,7 @@ test {
     //needed for lmdb to work correctly
     doFirst {
         jvmArgs = [
-                '--add-opens=java.base/java.nio=ALL-UNNAMED',
-                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+                '--add-opens=java.base/java.nio=ALL-UNNAMED'
         ]
     }
 }
